[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/UAProto_Scenes/BaseBody.gd" type="Script" id=1]
[ext_resource path="res://scenes/UAProto_Scenes/createMenu.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0, 0.054902, 0.364706, 1 )
metallic_specular = 0.0

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 15, 15, 15 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -7.5, -7.5, -7.5, -7.5, -7.5, 7.5, -7.5, 7.5, -7.5, -7.5, 7.5, 7.5, 7.5, -7.5, -7.5, 7.5, -7.5, 7.5, 7.5, 7.5, -7.5, 7.5, 7.5, 7.5 )

[sub_resource type="SphereMesh" id=4]
radial_segments = 8
rings = 4

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
albedo_color = Color( 0.0196078, 0, 0.352941, 1 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 5, 2, 5 )

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
albedo_color = Color( 0.0117647, 0.996078, 0.156863, 0.47451 )

[node name="BaseBody" type="KinematicBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -11, 0 )

[node name="Camera" type="Camera" parent="Head"]
current = true
far = 1000.0

[node name="RayCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -500 )

[node name="aimer" type="MeshInstance" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0 )
visible = false
mesh = SubResource( 4 )
material/0 = null

[node name="aimer2" type="MeshInstance" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="createMenu" type="Control" parent="Head/Camera"]
margin_right = 1026.0
margin_bottom = 608.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="MenuButton" parent="Head/Camera/createMenu"]
margin_left = 23.9913
margin_top = 17.5027
margin_right = 105.991
margin_bottom = 37.5027
hint_tooltip = "Create Drones"
text = "Create"
flat = false
items = [ "Scout", null, 0, false, false, 0, 0, null, "", false, "Heli", null, 0, false, false, 1, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="beamRay" type="RayCast" parent="."]

[node name="doubleClickTimer" type="Timer" parent="."]
one_shot = true

[node name="constructionSpace" type="MeshInstance" parent="."]
mesh = SubResource( 6 )
material/0 = SubResource( 7 )
[connection signal="timeout" from="doubleClickTimer" to="." method="_on_doubleClickTimer_timeout"]
